fixed overflow window

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   flex-direction: column;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 .test-container {
